# Pets.Application/Pets/Queries/PetDto.cs
@@ -16,6 +16,11 @@ namespace Pets.Application.Pets.Queries
         public double Price { get; set; }
         public DateTime Birthday { get; set; }
         public string Description { get; set; }
+        public string Type { get; set; }
+        public DateTime DateAdded { get; set; }
+        public DateTime DateUpdated { get; set; }
+        public string Phone { get; set; }
+        public string Owner { get; set; }
         public void Mapping(Profile profile)
         {
             profile.CreateMap<Pet, PetDto>()
@@ -26,7 +31,17 @@ namespace Pets.Application.Pets.Queries
                 .ForMember(petCommand => petCommand.Birthday,
                 opt => opt.MapFrom(petDto => petDto.Birthday))
                 .ForMember(petCommand => petCommand.Description,
-                opt => opt.MapFrom(petDto => petDto.Description));
+                opt => opt.MapFrom(petDto => petDto.Description))
+                .ForMember(petCommand => petCommand.Type,
+                opt => opt.MapFrom(petDto => petDto.Type))
+                .ForMember(petCommand => petCommand.DateAdded,
+                opt => opt.MapFrom(petDto => petDto.DateAdded))
+                .ForMember(petCommand => petCommand.DateUpdated,
+                opt => opt.MapFrom(petDto => petDto.DateUpdated))
+                .ForMember(petCommand => petCommand.Phone,
+                opt => opt.MapFrom(petDto => petDto.Phone))
+                .ForMember(petCommand => petCommand.Owner,
+                opt => opt.MapFrom(petDto => petDto.Owner));
         }
     }
 }
