# Pets.WebApi/Models/CreatePetDto.cs
@@ -1,16 +1,29 @@
 ﻿using AutoMapper;
 using Pets.Application.Common.Mappings;
 using Pets.Application.Pets.Commands;
+using Pets.Application.Pets.Queries;
+using Pets.Domain;
+using System.ComponentModel.DataAnnotations;
 
 namespace Pets.WebApi.Models
 {
     public class CreatePetDto : IMapWith<CreatePetCommand>
     {
-        public int Age { get; set; }
-        public double Price { get; set; }
+        [Required]
+        public int? Age { get; set; }
+        [Required]
+        public double? Price { get; set; }
         public DateTime Birthday { get; set; }
         public string Description { get; set; }
-
+        [Required]
+        [StringLength(20)]
+        public string? Type { get; set; }
+        [Required]
+        [RegularExpression(@"^\+?[1-9]\d{1,14}$", ErrorMessage = "The phone number is not valid.")]
+        public string? Phone { get; set; }
+        [Required]
+        [StringLength(20)]
+        public string? Owner { get; set; }
         public void Mapping(Profile profile)
         {
             profile.CreateMap<CreatePetDto, CreatePetCommand>()
@@ -21,7 +34,13 @@ namespace Pets.WebApi.Models
                 .ForMember(petCommand => petCommand.Birthday,
                 opt => opt.MapFrom(petDto => petDto.Birthday))
                 .ForMember(petCommand => petCommand.Description,
-                opt => opt.MapFrom(petDto => petDto.Description));
+                opt => opt.MapFrom(petDto => petDto.Description))
+                .ForMember(petCommand => petCommand.Type,
+                opt => opt.MapFrom(petDto => petDto.Type))
+                .ForMember(petCommand => petCommand.Phone,
+                opt => opt.MapFrom(petDto => petDto.Phone))
+                .ForMember(petCommand => petCommand.Owner,
+                opt => opt.MapFrom(petDto => petDto.Owner));
         }
     }
 }
