# Pets.WebApi/Models/GetAllByPriceRequest.cs
@@ -1,0 +1,8 @@
+﻿namespace Pets.WebApi.Models
+{
+    public class GetAllByPriceRequest
+    {
+        public int MaxPrice { get; set; }
+        public int MinPrice { get; set; }
+    }
+}
