# openapi.yaml
@@ -40,33 +40,44 @@ paths:
           content:
             text/plain:
               schema:
-                type: string
-                format: uuid
+                type: integer
+                format: int32
             application/json:
               schema:
-                type: string
-                format: uuid
+                type: integer
+                format: int32
             text/json:
               schema:
-                type: string
-                format: uuid
-    put:
+                type: integer
+                format: int32
+  /api/Pet/by-price:
+    get:
       tags:
         - Pet
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdatePetDto'
-          text/json:
-            schema:
-              $ref: '#/components/schemas/UpdatePetDto'
-          application/*+json:
-            schema:
-              $ref: '#/components/schemas/UpdatePetDto'
+      parameters:
+        - name: MaxPrice
+          in: query
+          schema:
+            type: integer
+            format: int32
+        - name: MinPrice
+          in: query
+          schema:
+            type: integer
+            format: int32
       responses:
         '200':
           description: OK
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
   /api/Pet/{id}:
     get:
       tags:
@@ -91,6 +102,30 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/PetDetailVm'
+    put:
+      tags:
+        - Pet
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePetDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePetDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/UpdatePetDto'
+      responses:
+        '200':
+          description: OK
     delete:
       tags:
         - Pet
@@ -104,9 +139,37 @@ paths:
       responses:
         '200':
           description: OK
+  /api/Pet/by-type:
+    get:
+      tags:
+        - Pet
+      parameters:
+        - name: type
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/PetListVm'
 components:
   schemas:
     CreatePetDto:
+      required:
+        - age
+        - owner
+        - phone
+        - price
+        - type
       type: object
       properties:
         age:
@@ -121,6 +184,18 @@ components:
         description:
           type: string
           nullable: true
+        type:
+          maxLength: 20
+          minLength: 0
+          type: string
+        phone:
+          minLength: 1
+          pattern: ^\+?[1-9]\d{1,14}$
+          type: string
+        owner:
+          maxLength: 20
+          minLength: 0
+          type: string
       additionalProperties: false
     PetDetailVm:
       type: object
@@ -140,6 +215,21 @@ components:
         description:
           type: string
           nullable: true
+        type:
+          type: string
+          nullable: true
+        dateAdded:
+          type: string
+          format: date-time
+        dateUpdated:
+          type: string
+          format: date-time
+        phone:
+          type: string
+          nullable: true
+        owner:
+          type: string
+          nullable: true
       additionalProperties: false
     PetDto:
       type: object
@@ -156,6 +246,21 @@ components:
         description:
           type: string
           nullable: true
+        type:
+          type: string
+          nullable: true
+        dateAdded:
+          type: string
+          format: date-time
+        dateUpdated:
+          type: string
+          format: date-time
+        phone:
+          type: string
+          nullable: true
+        owner:
+          type: string
+          nullable: true
       additionalProperties: false
     PetListVm:
       type: object
@@ -167,11 +272,14 @@ components:
           nullable: true
       additionalProperties: false
     UpdatePetDto:
+      required:
+        - age
+        - owner
+        - phone
+        - price
+        - type
       type: object
       properties:
-        id:
-          type: integer
-          format: int32
         age:
           type: integer
           format: int32
@@ -184,4 +292,16 @@ components:
         description:
           type: string
           nullable: true
+        type:
+          maxLength: 20
+          minLength: 0
+          type: string
+        phone:
+          minLength: 1
+          pattern: ^\+?[1-9]\d{1,14}$
+          type: string
+        owner:
+          maxLength: 20
+          minLength: 0
+          type: string
       additionalProperties: false
